===========================================================================
 This file describes changes in the IO package beginning from version 1.2:
===========================================================================

==========================
 Changes from 1.3 -> 1.4:
==========================

  - moved real random sources from the orb package here
  - implement picklers/unpicklers for random sources


==========================
 Changes from 1.2 -> 1.3:
==========================

  - hint to load a package if there is no handler for magic during unpickling
  - follow Frank's suggestion to allow more than one package with a
    C-part to be linked to a statically compiled GAP, document this
  - release subversion revision 155 as Version 1.3

