@@ -1237,14 +1237,14 @@ It builds upon the buffered I/O functions described in Section
 
 <ManSection>
     <Oper Name="IO_Pickle" Arg="f, ob"/>
-    <Returns> <C>IO_OK</C> or <C>IO_Error</C> </Returns>
+    <Returns> <C>IO&uscore;OK</C> or <C>IO&uscore;Error</C> </Returns>
     <Description>
         The argument <A>f</A> must be an open, writable <K>File</K>
         object. The object <A>ob</A> can be an arbitrary &GAP; object.
         The operation <Q>pickles</Q> or <Q>serialises</Q> the object
         <A>ob</A> and writes the result into the <K>File</K> object
-        <A>f</A>. If everything is OK, the unique value <C>IO_OK</C>
-        is returned and otherwise the unique value <C>IO_Error</C>.
+        <A>f</A>. If everything is OK, the unique value <C>IO&uscore;OK</C>
+        is returned and otherwise the unique value <C>IO&uscore;Error</C>.
         The resulting byte stream can be read again using the operation
         <Ref Oper="IO_Unpickle"/> and is platform- and architecture
         independent. Especially the question whether a system has
@@ -1268,13 +1268,14 @@ It builds upon the buffered I/O functions described in Section
 
 <ManSection>
     <Oper Name="IO_Unpickle" Arg="f"/>
-    <Returns> <C>IO_Error</C> or a &GAP; object </Returns>
+    <Returns> <C>IO&uscore;Error</C> or a &GAP; object </Returns>
     <Description>
         The argument <A>f</A> must be an open, readable <K>File</K>
         object. The operation reads from <A>f</A> and <Q>unpickles</Q>
-        the next object. If an error occurs, the unique value <C>IO_Error</C>
+        the next object. If an error occurs, the unique value 
+        <C>IO&uscore;Error</C>
         is returned. If the <K>File</K>
-        object is at end of file, the value <C>IO_Nothing</C> is returned.
+        object is at end of file, the value <C>IO&uscore;Nothing</C> is returned.
         Note that these two values are not picklable, because of
         their special meaning as return values of this operation here. 
     </Description>
@@ -1305,14 +1306,14 @@ The framework can be extended for other &GAP; object types as follows:
 For pickling, a method for the operation <Ref Oper="IO_Pickle"/> has
 to be installed which does the work. If the object to be pickled has
 subobjects, then the first action of the method is to call the function
-<C>IO_AddToPickled</C> with the object as argument. This will put it
+<C>IO&uscore;AddToPickled</C> with the object as argument. This will put it
 into the pickle cache and take care of self-references. Arbitrary
 subobjects can then be pickled using recursive calls to the operation
 <Ref Oper="IO_Pickle"/> handing down the same <K>File</K> object into
-the recursion. The method must either return <C>IO_Error</C> in case of
-an error or <C>IO_OK</C> if everything goes well. Before returning,
-a method that has called <C>IO_AddToPickled</C>
-must call the function <C>IO_FinalizePickled</C> without
+the recursion. The method must either return <C>IO&uscore;Error</C> in case of
+an error or <C>IO&uscore;OK</C> if everything goes well. Before returning,
+a method that has called <C>IO&uscore;AddToPickled</C>
+must call the function <C>IO&uscore;FinalizePickled</C> without
 arguments <E>under all circumstances</E>. If this call is missing,
 global data for the pickling procedure becomes corrupt!
 
@@ -1331,7 +1332,7 @@ explicitly!
 <P/>
 Unpickling is implemented as follows: For every 4 byte magic value
 there must be a function bound to that value in the record
-<C>IO_Unpicklers</C>. If the unpickling operation <Ref Oper="IO_Unpickle"/>
+<C>IO&uscore;Unpicklers</C>. If the unpickling operation <Ref Oper="IO_Unpickle"/>
 encounters that magic value, it calls the corresponding unpickling
 function. This function just gets one <K>File</K> object as argument.
 Since the magic value is already read, it can immediately start 
@@ -1341,11 +1342,11 @@ has to take care to restore the object including its type completely.
 <P/>
 If an object type has subobjects, the unpickling function has to
 first create a skeleton of the object without its subobjects, then
-call <C>IO_AddToUnpickled</C> on this skeleton, <E>before</E> unpickling
+call <C>IO&uscore;AddToUnpickled</C> on this skeleton, <E>before</E> unpickling
 subobjects. If things are not done in this order, the handling of 
 self-references down in the recursion will not work! An unpickling 
-function that has called <C>IO_AddToUnpickled</C> at the beginning
-has to call <C>IO_FinalizeUnpickled</C> without arguments before
+function that has called <C>IO&uscore;AddToUnpickled</C> at the beginning
+has to call <C>IO&uscore;FinalizeUnpickled</C> without arguments before
 returning <E>under all circumstances</E>! If this call is missing,
 global data for the unpickling procedure becomes corrupt!
 
@@ -1355,7 +1356,7 @@ to unpickle subobjects. Apart from this, unpickling functions can use
 arbitrary reading functions on the <K>File</K> object. However, they
 should only read sequentially and never move the current file position
 pointer otherwise. An unpickling function should return the newly
-created object or the value <C>IO_Error</C> if an error occurred.
+created object or the value <C>IO&uscore;Error</C> if an error occurred.
 They should never go into a break loop, because after leaving the user
 has to call <Ref Func="IO_ClearPickleCache"/> explicitly!
 
@@ -1366,6 +1367,35 @@ study the code for the basic &GAP; objects in the file
 
 </Subsection>
 
+</Section>
+
+<Section>
+    <Heading>Really random sources</Heading>
+
+    This section describes so called <Q>real random sources</Q>. It is an
+    extensionn to the library mechanism of random source objects that uses
+    the devices <F>/dev/random</F> and <F>/dev/urandom</F> available
+    on <F>Linux</F> systems (and maybe on other operating systems) providing
+    random numbers that are impossible to predict. The idea is that such
+    sources of random numbers are useful to produce unpredictable
+    secret keys for cryptographic applications.
+
+<ManSection>
+<Meth Name="RandomSource" Arg="r,dev"/>
+<Returns> a real random source object or <C>fail</C> </Returns>    
+<Description>
+    The first argument <A>r</A> must be the &GAP; filter 
+    <C>IsRealRandomSource</C> and the second either the string
+    <F>random</F> or the string <F>urandom</F>. A real
+    random source object is created that draws its random numbers from
+    the kernel devices <F>/dev/random</F> and <F>/dev/urandom</F>
+    respectively. Whereas <F>/dev/random</F> always provides random
+    numbers of not guaranteed <Q>quality</Q>, the device <F>/dev/urandom</F>
+    measures its entropy and produces guaranteed unpredictable numbers.
+    However, it might block until enough <Q>random</Q> events (like
+    mouse movements) have been accumulated.
+</Description>
+</ManSection>
 </Section>
 
 <Section>
